--- a/DGN/Views/Categories/Details.cshtml
+++ b/DGN/Views/Categories/Details.cshtml
@@ -1,37 +1,39 @@
 ﻿@model DGN.Models.Category
 
 @{
-    ViewData["Title"] = "Articles in this category";
+    ViewData["Title"] = "Details";
 }
 
-<div class="container">
+<h1>Details</h1>
 
-    <h1>
-        Articles under category <cName style="color: #5e4dc9;">@Html.DisplayFor(model => model.CategoryName)</cName>
-    </h1>
-
-
-    <div>
-        <hr />
-        @foreach (var item in Model.Articles)
-        {
-            <dl class="row">
-                <dt class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item.Title)
-                    <br/>
-                    <span class="small disabled">@item.User.Username</span>
-                </dt>
-                <dd class="col-sm-2">
-                    <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">Read now</a>
-                </dd>
-            </dl>
-            <hr />
-
-        }
-    </div>
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Index">Back to List</a>
-    </div>
+<div>
+    <h4>Category</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CategoryName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CategoryName)
+        </dd>
+    </dl>
 </div>
-
+<div>
+    <h4>Articles</h4>
+    <hr />
+@foreach (var item in Model.Articles)
+{
+<dl class="row">
+    <dt class="col-sm-10">
+        @Html.DisplayFor(modelItem => item.Title)
+    </dt>
+    <dd class="col-sm-2">
+        <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">Details</a>
+    </dd>
+</dl>
+}
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
+</div>
