--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -157,9 +157,9 @@
 
     <script id="commentTemplate" type="text/html">
         <div name="{id}" class="card text-dark bg-light mb-3" style="max-width: 100%;">
-            <div class="row">
-                <div class="col-md-2">
-                    <img style="height: 100%" class="rounded card-img" src="{imageLocation}" />
+            <div class="row h-120px">
+                <div class="col-md-2 h-100">
+                    <img class="rounded card-img h-100" src="{imageLocation}" />
                 </div>
                 <div class="col-md-10">
                     <div class="card-body">
