--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -49,7 +49,125 @@
             </div>
             <div class="col-md-8">
                 <div class="card mb-3" id="ViewProperties">
-
+                    @if (ViewData.ModelState.IsValid && ViewData["Error"] == null)
+                    {
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Model.Firstname
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Lastname)</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Model.Lastname
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Model.Email
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Role)</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Model.Role.ToString()
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Model.Birthday.ToString("dd/MM/yyyy")
+                            </div>
+                        </div>
+                        @if ((User.FindFirst(ClaimTypes.NameIdentifier)?.Value).Equals(Model.Id.ToString()))
+                        {
+                            <hr />
+                            <div class="row" id="EditButton">
+                                <div class="col-sm-12 text-secondary">
+                                    <button class="btn btn-info">Edit</button>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                    }
+                    else
+                    {
+                        <div class="col-lg-8">
+                            <div class="card">
+                                <form id="form" method="post" class="card-body" asp-action="Profile" enctype="multipart/form-data">
+                                    <input type="hidden" asp-for="Id" />
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input class="form-control" asp-for="Firstname">
+                                            <span asp-validation-for="Firstname" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Lastname)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input class="form-control" asp-for="Lastname">
+                                            <span asp-validation-for="Lastname" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input asp-for="Email" class="form-control">
+                                            <span asp-validation-for="Email" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Role</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" class="form-control" value="@Model.Role" readonly>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input class="form-control" asp-for="Birthday">
+                                            <span asp-validation-for="Birthday" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row" id="SaveChangesButton">
+                                        <div class="col-sm-3"></div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="submit" class="btn btn-primary px-4" value="Save Changes">
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    }
                 </div>
                 <div class="card mb-3">
                     <ul class="list-group list-group-flush">
@@ -107,6 +225,9 @@
 </div>
 
 @section Scripts {
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+
     <script type="text/javascript">
         function gettoken() {
             var token = '@Html.AntiForgeryToken()';
@@ -118,13 +239,15 @@
     <script id="EditTemplate" type="text/html">
         <div class="col-lg-8">
             <div class="card">
-                <form class="card-body" asp-action="Edit" enctype="multipart/form-data">
+                <form id="form" method="post" class="card-body" asp-action="Profile" enctype="multipart/form-data">
+                    <input type="hidden" asp-for="Id" />
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="row mb-3">
                         <div class="col-sm-3">
                             <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            <input type="text" class="form-control" asp-for="Firstname" value="@Model.Firstname">
+                            <input class="form-control" asp-for="Firstname">
                             <span asp-validation-for="Firstname" class="text-danger"></span>
                         </div>
                     </div>
@@ -133,7 +256,7 @@
                             <h6 class="mb-0">@Html.DisplayNameFor(model => model.Lastname)</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            <input type="text" class="form-control" asp-for="Lastname" value="@Model.Lastname">
+                            <input class="form-control" asp-for="Lastname">
                             <span asp-validation-for="Lastname" class="text-danger"></span>
                         </div>
                     </div>
@@ -142,7 +265,7 @@
                             <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            <input type="text" class="form-control" asp-for="Email" value="@Model.Email">
+                            <input asp-for="Email" class="form-control">
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                     </div>
@@ -159,11 +282,11 @@
                             <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            <input type="text" class="form-control" asp-for="Birthday" value="@Model.Birthday">
+                            <input class="form-control" asp-for="Birthday">
                             <span asp-validation-for="Birthday" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" id="SaveChangesButton">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-9 text-secondary">
                             <input type="submit" class="btn btn-primary px-4" value="Save Changes">
@@ -171,56 +294,6 @@
                     </div>
                 </form>
             </div>
-        </div>
-    </script>
-
-
-    <script id="ViewTemplate" type="text/html">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.FullName)</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                    @Model.FullName
-                </div>
-            </div>
-            <hr />
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                    @Model.Email
-                </div>
-            </div>
-            <hr />
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Role)</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                    @Model.Role.ToString()
-                </div>
-            </div>
-            <hr />
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6 class="mb-0">@Html.DisplayNameFor(model => model.Birthday)</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                    @Model.Birthday.ToString("dd/MM/yyyy")
-                </div>
-            </div>
-            @if ((User.FindFirst(ClaimTypes.NameIdentifier)?.Value).Equals(Model.Id.ToString()))
-            {
-                <hr/>
-                <div class="row" id="EditButton">
-                    <div class="col-sm-12 text-secondary">
-                        <button class="btn btn-info">Edit</button>
-                    </div>
-                </div>
-            }
         </div>
     </script>
     <script src="~/js/Profile.js"></script>
