--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -13,7 +13,7 @@
 
     <br />
     <h2>Branches list</h2>   
-    <form asp-action="Search">
+    <form asp-action="Search" style="padding-bottom: 1%">
         <div class="row">
             <div class="col">
                 <input name="query" id="query" autocomplete="off" class="form-control" placeholder="Search" />
@@ -22,7 +22,7 @@
                 <input type="submit" class="btn btn-primary" />
             </div>
         </div>
-</form>
+    </form>
     <table class="table">
         <thead>
             <tr>
