--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -17,15 +17,15 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label class="control-label">Current Password</label>
-                            <input name="currentPassword" class="form-control" />
+                            <input type="password" name="currentPassword" class="form-control" />
                         </div>
                         <div class="form-group">
                             <label class="control-label">New Password</label>
-                            <input type="text" name="newPassword" class="form-control" />
+                            <input type="password" name="newPassword" class="form-control" />
                         </div>
                         <div class="form-group">
                             <label class="control-label">Confirm New Password</label>
-                            <input type="text" name="confirmNewPassword" class="form-control" />
+                            <input type="password" name="confirmNewPassword" class="form-control" />
                         </div>
                         @if (ViewBag.Error != null)
                         {
