--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -21,11 +21,12 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">New Password</label>
-                            <input type="password" name="newPassword" class="form-control" />
+                            <input type="password" id="newPassword" name="newPassword" class="form-control" />
                         </div>
                         <div class="form-group">
                             <label class="control-label">Confirm New Password</label>
-                            <input type="password" name="confirmNewPassword" class="form-control" />
+                            <input type="password" id="confirmNewPassword" name="confirmNewPassword" class="form-control" />
+                            <span id='message'></span>
                         </div>
                         @if (ViewBag.Error != null)
                         {
@@ -41,6 +42,8 @@
     </section>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="~/js/password.js"></script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
