--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -15,7 +15,11 @@
             {
                 <p>
                     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-info btn-md" role="button">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger btn-md" role="button">Delete</a>
+                    <button type="button" class="btn btn-danger btn-md"
+                            data-toggle="modal"
+                            data-target="#articleDeleteModal">
+                        Delete
+                    </button>
                 </p>
             }
         </div>
@@ -115,6 +119,29 @@
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </div>
             </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="articleDeleteModal" tabindex="-1" role="dialog" aria-labelledby="articleDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="articleDeleteModalLabel">Confirm Delete</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this article?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <form asp-action="Delete">
+                        <input type="hidden" asp-for="Id" />
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                    </form>
+                </div>
         </div>
     </div>
 </div>
