FIX: password validation.

--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -8,12 +8,12 @@
     <section id="formSec" class="">
         <div class="container d-flex align-items-center justify-content-center">
             <aside>
-                <div class="inner">
+                <div class="inner"> 
                     <div class="formTitle">
                         <h2>Change Password</h2>
                     </div>
                     <hr class="sep">
-                    <form asp-action="ChangePassword">
+                    <form id="changePasswordForm" asp-action="ChangePassword">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label class="control-label">Current Password</label>
@@ -33,7 +33,7 @@
                             <div class="text-danger">@ViewBag.Error</div>
                         }
                         <div class="form-group">
-                            <input type="submit" value="Change Password" class="btn btn-primary" />
+                            <input type="submit" id="submit" value="Change Password" class="btn btn-primary" />
                         </div>
                     </form>
                 </div>
@@ -43,7 +43,7 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="~/js/password.js"></script>
+<script src="~/js/changePassword.js"></script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
