--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand d-none d-lg-block" style="margin: 0; float: none;" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand d-none d-lg-block" style="margin: 0; float: none;" asp-controller="Articles" asp-action="Index">
                     <img src="~/images/logo.png" />
                 </a>
                 <div class="collapse navbar-collapse" id="navbarToggler">
