--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DGN.Models.Branch>
 
-@{ ViewData["Title"] = "Index"; }
+@{ ViewData["Title"] = "Branches"; }
 
 <div class="container">
     <h2 class="text-center">Contact Us</h2><br />
