FIX: add required field to password on register.

--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -47,11 +47,11 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Password</label>
-                            <input type="password" name="plainPass" class="form-control" />
+                            <input type="password" required name="plainPass" class=sword a"form-control" />
                         </div>
                         <div class="form-group">
                             <label class="control-label">Confirm Password</label>
-                            <input type="password" name="confirmPass" class="form-control" />
+                            <input type="password" required name="confirmPass" class="form-control" />
                         </div>
                         @if (ViewBag.Error != null)
                         {
