--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -43,16 +43,7 @@
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link" href="#home">PC</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#why-us">PS5</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#features">Movies</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#pricing">More</a>
+                            <a class="nav-link" asp-controller="Articles" asp-action="GetAll">All Articles</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav nav-menu ml-auto">
