--- a/DGN/wwwroot/css/index.css
+++ b/DGN/wwwroot/css/index.css
@@ -145,7 +145,8 @@ section.hot-articles img.thumb:hover {
     text-overflow: ellipsis;
 }
 
-section.latest-articles {
+section.latest-articles,
+section.all-articles {
     display: -ms-grid;
     grid-template-columns: [mainContent-start] auto [mainContent-end rightRail-start] 320px [rightRail-end];
     display: grid;
@@ -158,7 +159,8 @@ section.latest-articles {
     background-color: #f3f3f3e6;
 }
 
-    section.latest-articles div.tbl {
+    section.latest-articles div.tbl,
+    section.all-articles div.tbl {
         grid-area: mainContent;
         margin-right: 0;
         display: table;
@@ -170,17 +172,20 @@ section.latest-articles {
         padding: 0px;
     }
 
-    section.latest-articles > h2 {
+    section.latest-articles > h2,
+    section.all-articles  > h2{
         border-bottom: solid 1px rgba(37, 38, 39, 0.15);
     }
 
-    section.latest-articles article {
+    section.latest-articles article,
+    section.all-articles article {
         display: table-row;
         position: relative;
         margin-left: 0px;
     }
 
-    section.latest-articles div.left {
+    section.latest-articles div.left,
+    section.all-articles div.left {
         display: table-cell;
         width: auto;
         box-sizing: border-box;
@@ -191,7 +196,8 @@ section.latest-articles {
         position: relative;
     }
 
-    section.latest-articles div.right {
+    section.latest-articles div.right,
+    section.all-articles div.right{
         display: table-cell;
         vertical-align: top;
         padding: 0px 20px;
@@ -199,17 +205,20 @@ section.latest-articles {
         box-sizing: border-box;
     }
 
-        section.latest-articles div.right div.info {
+        section.latest-articles div.right div.info,
+        section.all-articles div.right div.info{
             color: #cc0000;
         }
 
-    section.latest-articles div.right, section.latest-articles div.left {
+    section.latest-articles div.right, section.latest-articles div.left,
+    section.all-articles div.right, section.all-articles div.left {
         padding-top: 25px;
         padding-bottom: 25px;
         border-bottom: solid 1px rgba(37, 38, 39, 0.15);
     }
 
-    section.latest-articles img.thumb {
+    section.latest-articles img.thumb,
+    section.all-articles img.thumb {
         display: block;
         width: 100%;
         border-radius: 4px;
@@ -218,11 +227,13 @@ section.latest-articles {
         object-fit: cover;
     }
 
-    section.latest-articles h3 {
+    section.latest-articles h3,
+    section.all-articles h3 {
         margin: 6px 0px;
     }
 
-    section.latest-articles h3 a {
+    section.latest-articles h3 a,
+    section.all-articles h3 a {
         font-size: 18px;
         line-height: 20px;
         font-weight: 700;
@@ -231,15 +242,18 @@ section.latest-articles {
         text-decoration: none;
     }
 
-    section.latest-articles h3 a:hover {
+    section.latest-articles h3 a:hover,
+    section.all-articles  h3 a:hover {
         text-decoration: underline;
     }
 
-    section.latest-articles img.thumb:hover {
+    section.latest-articles img.thumb:hover,
+    section.all-articles img.thumb:hover{
         opacity: 0.85;
     }
 
-    section.latest-articles div.right > p {
+    section.latest-articles div.right > p,
+    section.all-articles div.right > p {
         display: block;
         margin: 0px;
     }
