--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -236,7 +236,7 @@
         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
             <row>
                 <img src="{imageLocation}" alt="Admin" width="50" height="50">
-                <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="{Id}"> {title} </a>
+                <a class="mb-0" href="/Articles/Details/{id}"> {title} </a>
             </row>
         </li>
     </script>
