--- a/DGN/Views/Articles/Create.cshtml
+++ b/DGN/Views/Articles/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -23,28 +23,13 @@
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageLocation" class="control-label"></label>
-                <input asp-for="ImageLocation" class="form-control" />
-                <span asp-validation-for="ImageLocation" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
-            @*<div class="form-group">
-            <label asp-for="UserId" class="control-label"></label>
-            <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
             <div class="form-group">
-                <label asp-for="CreationTimestamp" class="control-label"></label>
-                <input asp-for="CreationTimestamp" class="form-control" />
-                <span asp-validation-for="CreationTimestamp" class="text-danger"></span>
+                <label>Upload Article Image</label>
+                <input type="file" name="ImageFile" id="ImageFile" class="form-control-file">
             </div>
-            <div class="form-group">
-                <label asp-for="LastUpdatedTimestamp" class="control-label"></label>
-                <input asp-for="LastUpdatedTimestamp" class="form-control" />
-                <span asp-validation-for="LastUpdatedTimestamp" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
