--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -17,7 +17,7 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label class="control-label">Current Password</label>
-                            <input type="password" name="currentPassword" class="form-control" />
+                            <input type="password" id="currPassword" name="currentPassword" class="form-control" />
                         </div>
                         <div class="form-group">
                             <label class="control-label">New Password</label>
@@ -33,7 +33,7 @@
                             <div class="text-danger">@ViewBag.Error</div>
                         }
                         <div class="form-group">
-                            <input type="submit" id="submit" value="Change Password" class="btn btn-primary" />
+                            <input type="submit" id="submit" disabled value="Change Password" class="btn btn-primary" />
                         </div>
                     </form>
                 </div>
