--- a/DGN/Views/Articles/Edit.cshtml
+++ b/DGN/Views/Articles/Edit.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <div class="row">
         <div class="col-md-12">
-            <form asp-action="Edit">
+            <form asp-action="Edit" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
@@ -23,10 +23,6 @@
                     <label asp-for="Body" class="control-label"></label>
                     <textarea asp-for="Body" class="form-control"></textarea>
                     <span asp-validation-for="Body" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ImageLocation">Article Image</label>
-                    <input type="file" class="form-control-file" asp-for="ImageLocation">
                 </div>
                 <div class="form-group">
                     <label asp-for="CategoryId" class="control-label"></label>
@@ -42,6 +38,10 @@
                     <label asp-for="LastUpdatedTimestamp" class="control-label"></label>
                     <input asp-for="LastUpdatedTimestamp" class="form-control" readonly />
                     <span asp-validation-for="LastUpdatedTimestamp" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label>Upload Article Image</label>
+                    <input type="file" name="ImageFile" id="ImageFile" class="form-control-file">
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
