FIX: activity time align.

--- a/DGN/Views/Branches/Details.cshtml
+++ b/DGN/Views/Branches/Details.cshtml
@@ -29,7 +29,7 @@
                                 @Html.DisplayNameFor(model => model.ActivityTime)
                         </dt>
                         <dd class="col-sm-9">
-                            <pre>
+                            <pre style="text-align: left; white-space: pre-line;">
                                 @Html.DisplayFor(model => model.ActivityTime)
                             </pre>
                         </dd>
