--- a/DGN/Views/Branches/Delete.cshtml
+++ b/DGN/Views/Branches/Delete.cshtml
@@ -30,7 +30,7 @@
                             @Html.DisplayNameFor(model => model.ActivityTime)
                         </dt>
                         <dd class="col-sm-8">
-                            <pre>
+                            <pre style="text-align: left; white-space: pre-line;">
                               @Html.DisplayFor(model => model.ActivityTime)
                             </pre>
                         </dd>
@@ -38,7 +38,7 @@
 
                     <form asp-action="Delete">
                         <input type="hidden" asp-for="Id" />
-                        <input type="submit" value="Delete" class="btn btn-danger" /> |
+                        <input type="submit" value="Delete" class="btn btn-danger" />
                         <a asp-action="Index">Back to List</a>
                     </form>
                 </div>
